--- a/package.json
+++ b/package.json
@@ -9,4 +9,11 @@
 		"express": "^4.14.0",
 		"spotify-web-api-node": "^2.3.6"
 	}
+	"scripts": {
+		"start": {
+			"npm install",
+			"bower install",
+			"node server.js";
+		}
+	}
 }
